--- a/app/views/expedients/_form.html.erb
+++ b/app/views/expedients/_form.html.erb
@@ -1,21 +1,21 @@
 <br />
 <%= form_for(@expedient) do |f| %>
   <% if @expedient.errors.any? %>
-  <div id="error_explanation">
-  <h2><%= pluralize(@expedient.errors.count, "error") %> no permiten guardar este expediente:</h2>
-
-  <ul>
-    <% @expedient.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-  <% end %>
-  </ul>
-</div>
+    <div id="error_explanation">
+      <h2><%= pluralize(@expedient.errors.count, "error") %> no permiten guardar este expediente:</h2>
+      <ul>
+        <% @expedient.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
   <% end %>
 
 <div class="container">
 
   <div class="row">
     <div class="col-md-1 col-xs-4">
+      <%= f.submit 'Crear / Modificar Expediente'  %>
     </div>
 
     <div class="col-md-5 col-xs-8">
@@ -72,11 +72,9 @@
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-2 col-xs-5">
-      <%= f.label :perito_medico, 'Perito Médico' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
-      <%= f.text_field :perito_medico %>
     </div>
 
   </div>
@@ -104,11 +102,9 @@
     <div class="col-md-1"></div>
 
     <div class="col-md-2 col-xs-5">
-      <%= f.label :perito_medico_email, 'E-mail' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
-      <%= f.text_field :perito_medico_email %>
     </div>
   </div>
 
@@ -137,11 +133,9 @@
     </div>
 
     <div class="col-md-2 col-xs-5">
-      <%= f.label :perito_medico_telefono, 'Teléfono' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
-      <%= f.text_field :perito_medico_telefono %>
     </div>
   </div>
 
@@ -169,11 +163,9 @@
     </div>
 
     <div class="col-md-2 col-xs-5">
-      <%= f.label :perito_medico_incapacidad, '% Incapac' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
-      <%= f.text_field :perito_medico_incapacidad, :size => '2' %>
     </div>
   </div>
 
@@ -195,134 +187,130 @@
 
   <div class="row">
     <div class="col-md-1 col-xs-5">
+      <%= f.label :perito_medico, 'Perito Médico' %>
     </div>
-
-    <div class="col-md-5 col-xs-7">
+    <div class="col-md-1 col-xs-7">
+      <%= f.text_field :perito_medico %>
     </div>
-
 
     <div class="col-md-1"></div>
 
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-1 col-xs-5">
-    </div>
-
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-2 col-xs-5">
       <%= f.label :perito_psicologico, 'Psicologo' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
       <%= f.text_field :perito_psicologico %>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
 
     <div class="col-md-1"></div>
 
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-2 col-xs-5">
+    </div>
+
+    <div class="col-md-1 col-xs-7">
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-md-1 col-xs-5">
+      <%= f.label :perito_medico_email, 'E-mail' %>
+    </div>
+    <div class="col-md-1 col-xs-7">
+      <%= f.text_field :perito_medico_email %>
+    </div>
+
+    <div class="col-md-1"></div>
+
+    <div class="clearfix visible-sm"></div>
+
+    <div class="col-md-1 col-xs-5">
       <%= f.label :perito_psicologico_email, 'E-mail' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
       <%= f.text_field :perito_psicologico_email %>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
 
     <div class="col-md-1"></div>
 
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-2 col-xs-5">
+    </div>
+
+    <div class="col-md-1 col-xs-7">
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-md-1 col-xs-5">
+      <%= f.label :perito_medico_telefono, 'Teléfono' %>
+    </div>
+    <div class="col-md-1 col-xs-7">
+      <%= f.text_field :perito_medico_telefono %>
+    </div>
+
+    <div class="col-md-1"></div>
+
+    <div class="clearfix visible-sm"></div>
+
+    <div class="col-md-1 col-xs-5">
       <%= f.label :perito_psicologico_telefono, 'Teléfono' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
       <%= f.text_field :perito_psicologico_telefono %>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
 
     <div class="col-md-1"></div>
 
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-2 col-xs-5">
+    </div>
+
+    <div class="col-md-1 col-xs-7">
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-md-1 col-xs-5">
+      <%= f.label :perito_medico_incapacidad, '% Incapac' %>
+    </div>
+    <div class="col-md-1 col-xs-7">
+      <%= f.text_field :perito_medico_incapacidad, :size => '2' %>
+    </div>
+
+    <div class="col-md-1"></div>
+
+    <div class="clearfix visible-sm"></div>
+
+    <div class="col-md-1 col-xs-5">
       <%= f.label :perito_psicologico_incapacidad, '% Incapac' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
       <%= f.text_field :perito_psicologico_incapacidad, :size => '2'  %>
     </div>
+
+    <div class="col-md-1"></div>
+
+    <div class="clearfix visible-sm"></div>
+
+    <div class="col-md-2 col-xs-5">
+    </div>
+
+    <div class="col-md-1 col-xs-7">
+    </div>
+
   </div>
 
 
@@ -345,113 +333,107 @@
 
   <div class="row">
     <div class="col-md-1 col-xs-5">
+      <%= f.label :perito_contable, 'Contable' %>
     </div>
-
-    <div class="col-md-5 col-xs-7">
+    <div class="col-md-1 col-xs-7">
+      <%= f.text_field :perito_contable %>
     </div>
-
 
     <div class="col-md-1"></div>
 
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-1 col-xs-5">
+      <u><strong>Indemnización</strong> </u>
     </div>
-
 
     <div class="col-md-5 col-xs-7">
+      <%= f.text_field :indenmizacion, :size => '10' %>
     </div>
-
 
     <div class="col-md-1"></div>
 
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-2 col-xs-5">
-      <%= f.label :perito_contable, 'Contable' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
-      <%= f.text_field :perito_contable %>
     </div>
   </div>
 
 
   <div class="row">
     <div class="col-md-1 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-2 col-xs-5">
       <%= f.label :perito_contable_email, 'E-mail' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
       <%= f.text_field :perito_contable_email %>
     </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
 
     <div class="col-md-1"></div>
 
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-1 col-xs-5">
+      <u><strong>IBM</strong> </u>
     </div>
-
 
     <div class="col-md-5 col-xs-7">
+      <%= f.text_field :ibm, :size => '10' %>
     </div>
-
 
     <div class="col-md-1"></div>
 
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-2 col-xs-5">
-      <%= f.label :perito_contable_telefono, 'Teléfono' %>
     </div>
 
     <div class="col-md-1 col-xs-7">
-      <%= f.text_field :perito_contable_telefono %>
     </div>
   </div>
 
 
   <div class="row">
     <div class="col-md-1 col-xs-5">
+      <%= f.label :perito_contable_telefono, 'Teléfono' %>
+    </div>
+    <div class="col-md-1 col-xs-7">
+      <%= f.text_field :perito_contable_telefono %>
+    </div>
+
+    <div class="col-md-1"></div>
+
+    <div class="clearfix visible-sm"></div>
+
+    <div class="col-md-1 col-xs-5">
     </div>
 
     <div class="col-md-5 col-xs-7">
     </div>
 
+    <div class="col-md-1"></div>
+
+    <div class="clearfix visible-sm"></div>
+
+    <div class="col-md-2 col-xs-5">
+    </div>
+
+    <div class="col-md-1 col-xs-7">
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-md-1 col-xs-5">
+      <%= f.label :perito_contable_incapacidad , '% Incapac' %>
+    </div>
+
+    <div class="col-md-4 col-xs-7">
+      <%= f.text_field :perito_contable_incapacidad, :size => '2' %> (esto suena raro)
+    </div>
 
     <div class="col-md-1"></div>
 
@@ -470,11 +452,9 @@
     <div class="clearfix visible-sm"></div>
 
     <div class="col-md-2 col-xs-5">
-      <%= f.label :perito_contable_incapacidad , '% Incapac' %>
     </div>
 
     <div class="col-md-2 col-xs-7">
-      <%= f.text_field :perito_contable_incapacidad, :size => '2' %> (esto suena raro)
     </div>
   </div>
 
@@ -496,158 +476,151 @@
     </div>
   </div>
 
+  <%  if @new != 1 %>
 
-
-  <div class="row">
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-2 col-xs-5">
-      <%= f.label :indenmizacion, 'Indemnización' %>
-    </div>
-
-    <div class="col-md-2 col-xs-7">
-      <%= f.text_field :indenmizacion, :size => '10' %>
-    </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-
-    <div class="col-md-1"></div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-2 col-xs-5">
-      <%= f.label :ibm, 'IBM' %>
-    </div>
-
-    <div class="col-md-2 col-xs-7">
-      <%= f.text_field :ibm, :size => '10' %>
-    </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-
-    <div class="clearfix visible-sm"></div>
-
-    <div class="col-md-1 col-xs-5">
-    </div>
-
-    <div class="col-md-5 col-xs-7">
-    </div>
-  </div>
-
-</div>
-
-
-
-<div class="actions">
-  <%= f.submit 'Crear'  %>
-</div>
-
-
-<div>
-
-  <div class="container">
     <div class="row">
-      <div class="column">
-        <table class="table">
-          <tr>
-            <td>
-              <br />
-            </td>
+      <div class="col-md-1 col-xs-5">
+        <strong>Novedad</strong>
+      </div>
 
-            <td>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-              <div class="field">
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-                          </td>
-          </tr>
-          </tbody>
-        </table>
+      <div class="col-md-4 col-xs-7">
+      </div>
+
+      <div class="col-md-1"></div>
+
+      <div class="clearfix visible-sm"></div>
+
+      <div class="col-md-1 col-xs-5">
+      </div>
+
+
+      <div class="col-md-5 col-xs-7">
+      </div>
+
+
+      <div class="col-md-1"></div>
+
+      <div class="clearfix visible-sm"></div>
+
+      <div class="col-md-2 col-xs-5">
+      </div>
+
+      <div class="col-md-2 col-xs-7">
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-3 col-xs-5">
+        <textarea cols="75" rows="4" id="novedad" name="expedient[novedad]"></textarea>
+      </div>
+
+      <div class="col-md-3 col-xs-7">
+      </div>
+
+      <div class="clearfix visible-sm"></div>
+
+      <div class="col-md-1 col-xs-5">
+      </div>
+
+      <div class="col-md-5 col-xs-7">
+      </div>
+    </div>
+  <% end %>
+
+  <div class="row">
+    <div class="col-md-1 col-xs-5">&nbsp;
+    </div>
+
+    <div class="col-md-5 col-xs-7">
+    </div>
+
+    <div class="clearfix visible-sm"></div>
+
+    <div class="col-md-1 col-xs-5">
+    </div>
+
+    <div class="col-md-5 col-xs-7">
+    </div>
   </div>
+
+
+
+  <% if @new != 1 %>
+    <div class="row">
+      <div class="col-md-1 col-xs-5">
+        <strong>Bitácora</strong>
+      </div>
+
+      <div class="col-md-5 col-xs-7">
+      </div>
+
+      <div class="clearfix visible-sm"></div>
+
+      <div class="col-md-1 col-xs-5">
+      </div>
+
+      <div class="col-md-5 col-xs-7">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-1 col-xs-5">&nbsp;
+      </div>
+
+      <div class="col-md-5 col-xs-7">
+      </div>
+
+      <div class="clearfix visible-sm"></div>
+
+      <div class="col-md-1 col-xs-5">
+      </div>
+
+      <div class="col-md-5 col-xs-7">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-5 col-xs-5">
+        <strong>Novedad</strong>
+      </div>
+
+      <div class="col-md-3 col-xs-7">
+        <strong>Actualizada</strong>
+      </div>
+
+      <div class="clearfix visible-sm"></div>
+
+      <div class="col-md-2 col-xs-5">
+      </div>
+
+      <div class="col-md-5 col-xs-7">
+      </div>
+    </div>
+
+    <% @updates.each do |update| %>
+      <div class="row">
+        <div class="col-md-5 col-xs-5">
+          <%= update.novedad %>
+        </div>
+
+        <div class="col-md-2 col-xs-7">
+          <%= update.updated_at %>
+        </div>
+
+        <div class="clearfix visible-sm"></div>
+
+        <div class="col-md-3 col-xs-5">
+          [:: <%= link_to 'Corregir', edit_update_path(update) %> |
+          <%= link_to ' Borrar', update, method: :delete, data: { confirm: 'Are you sure?' } %> ::]
+        </div>
+
+        <div class="col-md-5 col-xs-7">
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+</div>
+
 
 
 <% end %>
